unpackaged/main/default/objects/Contact/fields/SocialMediaLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>SocialMediaLastUpdated__c</fullName>
    <label>Social Media Info Last Updated</label>
    <type>Date</type>
</CustomField>