unpackaged/main/default/objects/Contact/fields/Software_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Software_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this if the contact might be interested in Software division products. This does not include Siemens PLM software.</inlineHelpText>
    <label>Software (non-PLM)</label>
    <type>Checkbox</type>
</CustomField>