unpackaged/main/default/objects/Contact/fields/Software_Vendors_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Software_Vendors_Marketing__c</fullName>
    <label>Software Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Software_Marketing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>Icona</fullName>
            </value>
            <value>
                <fullName>SensAble</fullName>
            </value>
            <value>
                <fullName>aPriori</fullName>
            </value>
            <value>
                <fullName>Geomagic</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>