unpackaged/main/default/objects/Contact/fields/TECH_PrimaryUserContactIdAuto__c.field-meta.xml
<CustomField>
    <fullName>TECH_PrimaryUserContactIdAuto__c</fullName>
    <description>The Primary User Contact ID</description>
    <formula>Community_User__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary User Contact Id</label>
    <type>Text</type>
</CustomField>