unpackaged/main/default/objects/Contact/recordTypes/PrivateContact.recordType-meta.xml
<RecordType>
    <fullName>PrivateContact</fullName>
    <active>true</active>
    <label>Private Contact</label>
</RecordType>