unpackaged/main/default/objects/Contact/recordTypes/StandardContact.recordType-meta.xml
<RecordType>
    <fullName>StandardContact</fullName>
    <active>true</active>
    <label>Standard Contact</label>
</RecordType>