unpackaged/main/default/objects/Contact/validationRules/Can_contain_digits_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_contain_digits_only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
 OR(
  LEN(JLR_Excellence_ID__c) = 0,
  REGEX(JLR_Excellence_ID__c, "[0-9]{6}")
 )
)</errorConditionFormula>
    <errorDisplayField>JLR_Excellence_ID__c</errorDisplayField>
    <errorMessage>The Excellence ID must be 6 digits long and cannot contain any other characters.</errorMessage>
</ValidationRule>