unpackaged/main/default/objects/Contact/validationRules/CON_VR8_EmailChange24hrRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>CON_VR8_EmailChange24hrRestriction</fullName>
    <active>true</active>
    <description>Validation rule to prevent users changing the contact within 24hour of email change.</description>
    <errorConditionFormula>AND(ISCHANGED(Email ),EmailChanged__c = TRUE)</errorConditionFormula>
    <errorMessage>This contact has been changed within the last 24 hours. Please try again after 24 hours. [CON_VR8]</errorMessage>
</ValidationRule>