unpackaged/main/default/objects/Contact/validationRules/Email_required_if_enabled_for_community.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_required_if_enabled_for_community</fullName>
    <active>true</active>
    <description>Email required if enabled for community</description>
    <errorConditionFormula>AND(Enable_for_Community__c, ISBLANK(Email))</errorConditionFormula>
    <errorMessage>Email is required as the contact is enabled for community!</errorMessage>
</ValidationRule>