unpackaged/main/default/objects/Contact/validationRules/FSN_ID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FSN_ID_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($User.Alias = "DHEN") &amp;&amp;
NOT(ISBLANK(JLR_FSN_ID__c)) &amp;&amp;
NOT(REGEX(JLR_FSN_ID__c, "[a-zA-Z]{1}-[a-zA-Z0-9]{1,6}"))</errorConditionFormula>
    <errorDisplayField>JLR_FSN_ID__c</errorDisplayField>
    <errorMessage>An FSN-ID must contain a '-' after the first letter and have between 1 and 6 characters after the '-'.</errorMessage>
</ValidationRule>