unpackaged/main/default/objects/Contact/validationRules/Must_Specify_Marketing_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Specify_Marketing_Info</fullName>
    <active>false</active>
    <errorConditionFormula>IF( 
   AND( $UserRole.Name &lt;&gt; "Executive/Director", $UserRole.Name &lt;&gt; ""),
   AND( Software_Marketing__c  = FALSE, PLM_Marketing__c = FALSE , IT_Marketing__c  = FALSE ,  Marketing_Exclude__c = FALSE ,  Data_Services_Marketing__c = FALSE ,  Academy_Marketing__c = FALSE ),
   FALSE 
)</errorConditionFormula>
    <errorMessage>You must specify at least one division and or vendor for marketing purposes or select "Exclude from Marketing".</errorMessage>
</ValidationRule>