unpackaged/main/default/objects/Contact/validationRules/No_First_name.validationRule-meta.xml
<ValidationRule>
    <fullName>No_First_name</fullName>
    <active>false</active>
    <description>No first name.</description>
    <errorConditionFormula>LEN(FirstName) &lt; 1</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>You must specify a first name!</errorMessage>
</ValidationRule>