unpackaged/main/default/objects/Contact/validationRules/One_form_of_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>One_form_of_contact</fullName>
    <active>false</active>
    <description>Must specify either Phone, Mobile or E-mail.</description>
    <errorConditionFormula>IF(LEN(Phone) &lt; 4, IF(LEN(MobilePhone) &lt; 4, IF(LEN(Email) &lt; 4, TRUE, FALSE), FALSE), FALSE)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>You must specify either a phone number, mobile number or email address!</errorMessage>
</ValidationRule>