unpackaged/main/default/objects/Contact/listViews/Calling_Account_Manufacturing_D_Rating.listView-meta.xml
<ListView>
    <fullName>Calling_Account_Manufacturing_D_Rating</fullName>
    <columns>CAMPAIGN_MEMBER.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Calling-Account-Manufacturing-D-Rating</label>
</ListView>