unpackaged/main/default/objects/Contact/listViews/Contractors_with_Mobiles.listView-meta.xml
<ListView>
    <fullName>Contractors_with_Mobiles</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>AEC - Construction/Contractor</value>
    </filters>
    <filters>
        <field>CONTACT.PHONE3</field>
        <operation>contains</operation>
        <value>07</value>
    </filters>
    <label>Contractors with Mobiles</label>
    <sharedTo>
        <group>Casey_O_Donnell</group>
    </sharedTo>
</ListView>