unpackaged/main/default/objects/Contact/listViews/Escalated_Contacts.listView-meta.xml
<ListView>
    <fullName>Escalated_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>EnerjyhubEscalationEmail1SentDate__c</columns>
    <columns>EnerjyhubEscalationEmail2SentDate__c</columns>
    <columns>EnerjyhubEscalationDemotionDate_c__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsParentAccountEscalatedAuto__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.StandardContact</value>
    </filters>
    <filters>
        <field>SIM_on_site_account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Escalated Contacts</label>
    <sharedTo>
        <role>GroupTechnicalManager</role>
    </sharedTo>
</ListView>