unpackaged/main/default/objects/Contact/listViews/FY12_Autodesk_CSAT_Contacts.listView-meta.xml
<ListView>
    <fullName>FY12_Autodesk_CSAT_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN_MEMBER.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>FY12: Autodesk CSAT Contacts</label>
    <sharedTo>
        <group>MarketingTeam</group>
        <group>SoftwareDivisionTeam</group>
    </sharedTo>
</ListView>