unpackaged/main/default/objects/Contact/listViews/In_Line_Edit.listView-meta.xml
<ListView>
    <fullName>In_Line_Edit</fullName>
    <columns>Primary__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.StandardContact</value>
    </filters>
    <label>In Line Edit</label>
</ListView>